# extract_otp_secrets

./: .editorconfig  .flake8  .gitattributes  .gitignore  Dockerfile  Dockerfile_no_qr_reader  Dockerfile_only_txt  Pipfile  README.md  build.sh  conftest.py  devbox.json  devenv.nix  example_export.txt  example_keepass_output.hotp.csv  example_keepass_output.totp.csv  example_output.csv  example_output.json  extract_otp_secret_keys.code-workspace  extract_otp_secret_keys.py  flake.nix  google_auth.proto  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_pytest.sh  setup.cfg  setup.py  test_extract_otp_secret_keys_pytest.py  test_extract_otp_secret_keys_unittest.py  test_extract_qrcode_unittest.py  upgrade_deps.sh  upgrade_protoc.sh  utils.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  ci_docker.yml  ci_release.yml  codeql-analysis.yml  extract_otp_secret_keys.yml  nightly.yml
docker/: .alias  Dockerfile  Dockerfile_only_txt
docs/: README_TOC.md  meta.md
generated_python/: google_auth_pb2.py
installer/: build_dmg.sh  extract_otp_secrets_macos_template.spec  win_file_version_info_template.txt
src/: extract_otp_secret_keys.py  extract_otp_secrets.py
src/protobuf_generated_python/: google_auth_pb2.py  google_auth_pb2.pyi
test/: example_export_only_totp.txt  print_verbose_output.txt  printqr_output.txt  test_export_wrong_content.txt  test_export_wrong_prefix.txt  test_plus_problem_export.txt
tests/: conftest.py  extract_otp_secrets_img_unit_test.py  extract_otp_secrets_test.py  extract_otp_secrets_txt_unit_test.py  test_extract_otp_secret_keys_pytest.py  test_extract_otp_secret_keys_unittest.py  test_extract_qrcode_unittest.py  utils.py
tests/data/: only_comments.txt  print_verbose_output-n-v.txt  print_verbose_output-n-vv.txt  print_verbose_output-n-vvv.txt  print_verbose_output-n.txt  print_verbose_output-v.txt  print_verbose_output-vv.txt  print_verbose_output-vvv.txt  print_verbose_output.txt  printqr_output.txt  test_export_wrong_data.txt  url_list_output.txt
