[build-system]
requires = [
  "setuptools>=64.0.0", "wheel>=0.37.0", "pip", "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "extract_otp_secret_keys"
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
version = "1.6.0"
dependencies = [
  "protobuf",
  "qrcode",
  "Pillow",
  "qreader",
  "pyzbar",
  "opencv-python",
  "typing_extensions; python_version<='3.7'",
]
description = "Extract two-factor authentication (2FA, TFA, OTP) secret keys from export QR codes of 'Google Authenticator' app"
# TODO dynamic = ["version"]
keywords = ["python", "security", "json", "otp", "csv", "protobuf", "qrcode", "two-factor", "totp", "google-authenticator", "recovery", "proto3", "mfa", "two-factor-authentication", "tfa", "qr-codes", "otpauth", "2fa", "security-tools"]
license = {text = "GNU General Public License v3 (GPLv3)"}
readme = "README.md"
authors = [{name = "scito", email = "info@scito.ch"}]
maintainers = [{name = "scito", email = "info@scito.ch"}]
requires-python = ">=3.7, <4"
scripts = {extract_otp_secret_keys = "extract_otp_secret_keys:sys_main"}
urls = {Project-URL = "https://github.com/scito/extract_otp_secret_keys", Bug-Reports = "https://github.com/scito/extract_otp_secret_keys/issues", Source = "https://github.com/scito/extract_otp_secret_keys" }

[tool.setuptools]
py-modules = ["extract_otp_secret_keys", "protobuf_generated_python.google_auth_pb2"]

[tool.setuptools.dynamic]
# TODO version = {attr = "extract_otp_secret_keys.VERSION"}

[tool.setuptools.package-data]
"*" = ["*.txt", "*.json", "*.png", "*.md"]
