[metadata]
name = extract_otp_secret_keys
version = 1.6.0
long_description = file: README.md
description = Extract two-factor authentication (2FA, TFA, OTP) secret keys from export QR codes of "Google Authenticator" app
long_description_content_type = text/markdown
url = https://github.com/scito/extract_otp_secret_keys
author = scito
author_email = info@scito.ch
maintainer = scito
maintainer_email = info@scito.ch
license = GNU General Public License v3 (GPLv3)
keywords = python security json otp csv protobuf qrcode two-factor totp google-authenticator recovery proto3 mfa two-factor-authentication tfa qr-codes otpauth 2fa security-tools

# https://pypi.org/classifiers/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: X11 Applications :: Qt
    Environment :: Win32 (MS Windows)
    Topic :: System :: Archiving :: Backup
    Topic :: Utilities
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
python_requires = >=3.7, <4
py_modules = extract_otp_secret_keys, protobuf_generated_python.google_auth_pb2
# install_requires =
#     protobuf
#     qrcode
#     Pillow
#     qreader
#     pyzbar
#     opencv-python
#     typing_extensions;python_version<='3.7'
packages = find:
package_dir =
    = .
project_urls =
    Bug Reports = https://github.com/scito/extract_otp_secret_keys/issues
    Source = https://github.com/scito/extract_otp_secret_keys

# [options.entry_points]
#     console_scripts =
#         extract_otp_secret_keys = extract_otp_secret_keys:sys_main

[options.packages.find]
where = "."

[options.package_data]
* =
    *.txt
    *.json
    *.png
    *.md
