[metadata]
name = extract_otp_secret_keys

[options]
python_requires = >=3.7, <4
py_modules = extract_otp_secret_keys, protobuf_generated_python.google_auth_pb2
# install_requires =
#     protobuf
#     qrcode
#     Pillow
#     qreader
#     pyzbar
#     opencv-python
#     typing_extensions;python_version<='3.7'
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
